--- a/_layouts/static.html
+++ b/_layouts/static.html
@@ -6,8 +6,8 @@
         {{ content }}
       </div>
 
-      {% if site.posts.size > 0 %}
-        <div class="episode-list">
+      <div class="episode-list">
+        {% if site.posts.size > 0 %}
           <h3>Recent Episodes</h3>
           <ul>
             {% for post in site.posts limit:10 %}
@@ -15,9 +15,18 @@
               <a href="{{ post.url }}">{{ post.title }}</a>
             </li>
             {% endfor %}
-          </ul>    
-        </div>
-      {% endif %}
+          </ul> 
+        {% endif %}
+  
+        <h3>Start something</h3>
+
+        <a href="https://docs.google.com/forms/d/14LvBqDK1gTq2WyOW2EcjLws1-FB72nCaExer3Pmyu5k/viewform?usp=send_form" class="btn btn-small btn-threequarter">Suggest a guest</a> <br />
+
+        <a href="https://twitter.com/intent/tweet?text=%23openparen" class="btn btn-small btn-threequarter">Tweet #openparen</a>
+
+      </div>
+
+
 
     </section>
 
