--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Enriqueta:700' rel='stylesheet' type='text/css'>
+    <link href='https://cdn.jsdelivr.net/font-hack/2.013/css/hack.min.css' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/github-light.css" media="screen">
     <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.png" />  </head>
