--- a/_layouts/static.html
+++ b/_layouts/static.html
@@ -20,7 +20,7 @@
             {% for post in site.posts limit:10 %}
               {% if post.date <= today %}
                 <li>
-                  <a href="{{ post.url }}">{{ post.title }}</a>
+                  <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
                 </li>
               {% endif %}
             {% endfor %}
@@ -28,12 +28,12 @@
         {% endif %}
 
         {% if site.tags['upcoming'].size > 0 %}
-          <h3>Upcoming Episodes</h3>
+          <h3>Upcoming Guests</h3>
           <ul>
             {% for post in site.tags['upcoming'] %}
               {% if post.date > today %}
                 <li>
-                  <a href="{{ post.url }}">{{ post.title }}</a>
+                  {{ post.title }}
                 </li>
               {% endif %}
             {% endfor %}            
