--- a/_layouts/static.html
+++ b/_layouts/static.html
@@ -9,7 +9,7 @@
       <div class="episode-list">
         <h3>Start something</h3>
 
-        <a href="/subscribe" class="btn btn-small btn-threequarter">Subscribe</a> <br />
+        <a href="{{ site.baseurl }}/subscribe" class="btn btn-small btn-threequarter">Subscribe</a> <br />
 
         <a href="https://docs.google.com/forms/d/14LvBqDK1gTq2WyOW2EcjLws1-FB72nCaExer3Pmyu5k/viewform?usp=send_form" class="btn btn-small btn-threequarter">Suggest a guest</a> <br />
 
