--- a/_layouts/static.html
+++ b/_layouts/static.html
@@ -12,7 +12,7 @@
           <h3>Recent Episodes</h3>
           <ul>
             {% for post in site.posts limit:10 %}
-              {% if post.date <= today %}
+              {% if post.date <= today and post.tags contains 'published' %}
                 <li>
                   <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
                 </li>
