--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
       </h1>
     </section>
 <ul class="header-subnav clearfix">
-  <li><a href="{{ site.baseurl }}">Home</a></li>
+  <li><a href="{{ site.baseurl }}/">Home</a></li>
   <li><a href="{{ site.baseurl }}/subscribe">Subscribe</a></li>
   <li><a href="https://docs.google.com/forms/d/14LvBqDK1gTq2WyOW2EcjLws1-FB72nCaExer3Pmyu5k/viewform?usp=send_form">Suggest a guest</a></li>
   <li><a href="https://twitter.com/intent/tweet?text=%23openparen">Tweet #openparen</a></li>
