--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,22 +12,8 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/stylesheets/github-light.css" media="screen">
     <link rel="shortcut icon" href="favicon.png" /> 
-    <script>
-       function loadAssets() {
-          if (window.location.hostname.match(/github/)) {
-            var
-              styles = document.querySelector('[rel="stylesheet]"');
-      
-            style.setAttribute('href', '/open_paren' + styles.getAttribute('href'));
-          }
-        }
-      
-        function redirect() {
-          if (window.location.hostname.match(/github/)) {
-            window.location.replace('http://openparen.club' + window.location.pathname);
-          }
-        }
-    </script>
+    <link rel="canonical" href="{{ site.url }}{{ page.url }}">
+  
   </head>
   <body>
     <section class="page-header">
