--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,13 +12,13 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/stylesheets/github-light.css" media="screen">
     <link rel="shortcut icon" href="favicon.png" /> 
-    <script>
+   <script>
       function updateAssetPaths() {
         if (window.location.hostname.match(/github\.io/)) { // Only run if "github.io" appears in the hostname
           var
             i, // Our counter, undefined for now
             styles = document.querySelectorAll('[rel="stylesheet]"'); // Every stylesheet link
-      ​
+      
           for (i = 0; i < styles.length; i++) { // loops through each stylesheet link
             if (styles[i].getAttribute('href')[0] === '/') { // if the stylesheet link starts with "/"
               styles[i].setAttribute('href', '/open_paren' + styles[i].getAttribute('href')); // prepend that stylesheet link with "/open_paren"
@@ -26,8 +26,8 @@
           }
         }
       }
-      ​
-      updateAssetPaths();
+     
+      updateAssetPaths(); // Invoke the function we defined above
     </script>
   </head>
   <body>
