--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <title>{% if page.title %} {{ page.title }} {% endif %}( Open paren</title>
+    <script type="text/javascript">
+if (window.location.href.indexOf('thatandromeda.github.io') >= 0) {
+  window.location.href = 'http://openparen.club{{ page.url }}';
+}    </script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="{{ site.author }}"/>
+    <link rel="canonical" href="//openparen.club/{{ page.url }}" />
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Enriqueta:700' rel='stylesheet' type='text/css'>
